# humanizer

./: Cargo.toml  README.md  bundler.toml
src/: editor.rs  lib.rs
src/editor/: widgets.rs
